--- a/hw20.css
+++ b/hw20.css
@@ -1,17 +1,17 @@
 .gallery {
     display: flex;
     overflow-x: auto;
-    }
-    
-    .image {
+}
+
+.image {
     width: 300px;
     height: 200px;
     object-fit: cover;
     margin-right: 20px;
     cursor: pointer;
-    }
-    
-    .full-image-container {
+}
+
+.full-image-container {
     display: none;
     position: fixed;
     top: 0;
@@ -20,9 +20,9 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
-    }
-    
-    .full-image {
+}
+
+.full-image {
     max-width: 90%;
     max-height: 90%;
     margin: auto;
@@ -31,4 +31,10 @@
     bottom: 0;
     left: 0;
     right: 0;
-    }
+}
+
+#boxes {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
